--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ header {
 }
 
 header.active {
-    animation: show-header 1.5s linear forwards;
-    animation-delay: 1.2s;
+    animation: show-header 0.8s linear forwards;
+    animation-delay: 0.3s;
 }
   
 @keyframes show-header {
@@ -103,7 +103,7 @@ nav a.active{
 
 .bars-box.active .bar {
     animation: show-bars 0.5s ease-in-out both;
-    animation-delay: calc(0.1s * var(--i));
+    animation-delay: calc(0.05s * var(--i));
 }
   
 @keyframes show-bars {
@@ -127,8 +127,8 @@ section {
 }
 
 section.active {
-    animation: show-content 1.5s linear forwards;
-    animation-delay: 1.6s;
+    animation: show-content 0.8s linear forwards;
+    animation-delay: 0.3s;
 }
   
 @keyframes show-content {
@@ -398,9 +398,14 @@ section.active {
     font-size: 1.6rem;
 }
 
-.resume-box .desc {
-    margin: 2rem 0 2.5rem;
+.resume-box .desc, 
+.resume-detail .desc {
+    font-size: 1.8rem; /* Augmentez cette valeur si nécessaire */
+    line-height: 2.5rem; /* Améliore l'espacement vertical */
+    color: var(--white-color); /* Assurez-vous que la couleur est lisible */
+    margin-bottom: 2rem; /* Ajoute un espacement en bas */
 }
+
 
 /* Boutons pour changer de catégorie */
 .resume-box .resume-btn {
@@ -914,6 +919,45 @@ section {
         font-size: 3.5rem;
     }
 }
-      
 
+/* Votre CSS existant... */
+
+/* Style pour le modal */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 200; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgba(31, 36, 45, 0.9); /* Couleur de fond semi-transparente */
+  }
+  
+  .modal-content {
+    background-color: var(--second-bg-color);
+    margin: 15% auto; /* Centrer verticalement */
+    padding: 2rem;
+    border: .2rem solid var(--main-color);
+    width: 80%;
+    max-width: 50rem;
+    border-radius: 1rem;
+    position: relative;
+    text-align: center;
+  }
+  
+  .close-btn {
+    color: var(--white-color);
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    font-size: 3rem;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .modal-content p {
+    font-size: 1.8rem;
+  }
   
